syntax = "proto3";
package DomainServices.DocumentService.v1;
option csharp_namespace = "DomainServices.DocumentService.Contracts.v1";

import "GetDocument.proto";

service DocumentService {
   rpc GetDocument (GetDocumentRequest) returns (GetDocumentResponse);
}